--- a/ArticlePortal/Views/Articles/Index.cshtml
+++ b/ArticlePortal/Views/Articles/Index.cshtml
@@ -19,8 +19,8 @@
                 <td>@Html.DisplayFor(modelItem => item.Author)</td>
                 <td>@item.PublishedDate.ToString("yyyy-MM-dd")</td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Details</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
